@@ -37,6 +37,7 @@
 -- fixed stream_reassemble.direction
 -- initial integration of hosts into binder
 -- don't log redecode events (from shutdown rebuilds)
+-- changed normalizer ip4.base and tcp.base to default to true
 
 127
 -- REG_TEST out logging tcp options for rebuilt packets to match snort bug
